# botblocks

./: .gitignore  README.md  pyproject.toml  readme.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
blockbots/: __init__.py  cv.py
blockbots.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/: block.py  bot.py  drive.py  hotdog.py
python/: __init__.py
sim/: Cargo.toml
sim/src/: main.rs  server.rs
web/: .firebaserc  .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
web/docs/: ai-system.md  architecture.md  getting-started.md  python-api.md  simulation.md  typescript-api.md
web/public/: botblocks.py  demo.py  demo_ai.py  demo_custom_ai.py  sim.d.ts  sim.js  sim_bg.wasm.d.ts
web/src/: AiLog.tsx  App.tsx  Editor.tsx  SimView.tsx  block.py  index.css  main.css  virtual-pyodide-files.d.ts  vite-env.d.ts  webYOLO.ts
web/src/ai/: Agent.ts  anthropic.ts  index.ts  openai.ts  openrouter.ts  providers.ts  tools.ts
web/src/sim/: Renderer.ts  Robot.ts  Vision.ts  World.ts  index.ts
