[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
wasm-bindgen = "0.2.113"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
